removed sign_driver.cmd and added the signing driver code as a post build event

--- a/src/pbfilter/pbfilter.vcproj
+++ b/src/pbfilter/pbfilter.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="pbfilter"
 	ProjectGUID="{141BF107-16D2-4AF8-85F2-FA655A327F35}"
 	RootNamespace="pbfilter"
@@ -110,6 +110,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -203,6 +205,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -303,6 +307,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -402,6 +408,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -502,6 +510,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -601,6 +611,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -694,6 +706,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -787,6 +801,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing pbfilter.sys driver"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll pbfilter.sys&#x0D;&#x0A;)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
