--- a/src/peerblock/pb.vcproj
+++ b/src/peerblock/pb.vcproj
@@ -105,6 +105,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -194,6 +196,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -289,6 +293,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -385,6 +391,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -482,7 +490,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine=""
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -580,6 +589,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -668,6 +679,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 		<Configuration
@@ -757,6 +770,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing peerblock.exe"
+				CommandLine="IF DEFINED PB_CERT (&#x0D;&#x0A;cd  &quot;$(OutDir)\&quot;&#x0D;&#x0A;&quot;%PB_DDK_DIR%\bin\SelfSign\signtool.exe&quot; sign /v /ac %PB_CERT% /s my /n &quot;PeerBlock, LLC&quot; /t http://timestamp.globalsign.com/scripts/timstamp.dll peerblock.exe&#x0D;&#x0A;)"
 			/>
 		</Configuration>
 	</Configurations>
