--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -682,12 +682,12 @@ BEGIN
             VALUE "Comments", "http://www.peerblock.com"
             VALUE "CompanyName", "PeerBlock, LLC"
             VALUE "FileDescription", "PeerBlock"
-            VALUE "FileVersion", MAKE_STR(PB_VER_MAJOR) ", " MAKE_STR(PB_VER_MINOR) ", " MAKE_STR(PB_VER_BUGFIX) ", " MAKE_STR(PB_VER_BUILDNUM)
+            VALUE "FileVersion", STRINGIFY(PB_VER_MAJOR) ", " STRINGIFY(PB_VER_MINOR) ", " STRINGIFY(PB_VER_BUGFIX) ", " STRINGIFY(PB_VER_BUILDNUM)
             VALUE "InternalName", "PeerBlock"
             VALUE "LegalCopyright", "Copyright (C) 2009-2010 PeerBlock, LLC"
             VALUE "OriginalFilename", "peerblock.exe"
             VALUE "ProductName", "PeerBlock"
-            VALUE "ProductVersion", MAKE_STR(PB_VER_MAJOR) ", " MAKE_STR(PB_VER_MINOR) ", " MAKE_STR(PB_VER_BUGFIX) ", " MAKE_STR(PB_VER_BUILDNUM)
+            VALUE "ProductVersion", STRINGIFY(PB_VER_MAJOR) ", " STRINGIFY(PB_VER_MINOR) ", " STRINGIFY(PB_VER_BUGFIX) ", " STRINGIFY(PB_VER_BUILDNUM)
         END
     END
     BLOCK "VarFileInfo"
