changed Intermediate dir and lib dir; everything goes into "$(SolutionDir)Intermediate"

--- a/src/pbfilter/pbfilter.vcproj
+++ b/src/pbfilter/pbfilter.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="pbfilter"
 	ProjectGUID="{141BF107-16D2-4AF8-85F2-FA655A327F35}"
 	RootNamespace="pbfilter"
@@ -22,7 +22,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -74,7 +74,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\i386;$(PB_DDK_DIR)\lib\wlh\i386;$(NOINHERIT)"
 				GenerateManifest="false"
 				EnableUAC="false"
@@ -113,7 +112,7 @@
 		<Configuration
 			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -165,7 +164,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib libcntpr.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wlh\amd64;$(PB_DDK_DIR)\lib\wnet\amd64;$(NOINHERIT)"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
@@ -204,7 +202,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -259,7 +257,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib libcntpr.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\w2k\i386;$(NOINHERIT)"
 				GenerateManifest="false"
 				EnableUAC="false"
@@ -299,7 +296,7 @@
 		<Configuration
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -354,7 +351,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib libcntpr.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wnet\amd64;$(NOINHERIT)"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
@@ -393,7 +389,7 @@
 		<Configuration
 			Name="Release (Vista)|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -448,7 +444,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\i386;$(PB_DDK_DIR)\lib\wlh\i386;$(NOINHERIT)"
 				GenerateManifest="false"
 				EnableUAC="true"
@@ -488,7 +483,7 @@
 		<Configuration
 			Name="Release (Vista)|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -543,7 +538,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wlh\amd64;$(NOINHERIT)"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
@@ -582,7 +576,7 @@
 		<Configuration
 			Name="Debug (Vista)|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -635,7 +629,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\i386;$(PB_DDK_DIR)\lib\wlh\i386;$(NOINHERIT)"
 				GenerateManifest="false"
 				EnableUAC="false"
@@ -674,7 +667,7 @@
 		<Configuration
 			Name="Debug (Vista)|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -727,7 +720,6 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
-				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wlh\amd64;$(NOINHERIT)"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
